syntax = 'proto3';
package auth;
option go_package = "./pkg/pb";

message GetCodeRequest{
  string phone = 1;
}
message GetCodeResponse{
  int32 status = 1;
}
message VerifyRequest{
  string phone = 1;

  string code = 2;
}
message VerifyResponse{
  string token = 2;
}
service AuthService {
  rpc GetCode(GetCodeRequest) returns (GetCodeResponse) {}
  rpc Verify(VerifyRequest) returns (VerifyResponse) {}
  rpc ValidateToken(ValidateRequest) returns (ValidateResponse) {}
}
message ValidateRequest { string token = 1; }

message ValidateResponse {
  int64 status = 1;
  string error = 2;
  string userId = 3;
  string phone = 4;}